deployment/cms/strapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-service
  namespace: web
spec:
  type: ClusterIP
  selector:
    app: strapi
  ports:
    - port: 80
      targetPort: 1337
